k8s/fe_deployment.yaml
# Source: mern/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mern-web
  labels:
    app.kubernetes.io/name: mern
    app.kubernetes.io/instance: mern-web
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: mern
      app.kubernetes.io/instance: mern-web
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mern
        app.kubernetes.io/instance: mern-web
    spec:
      imagePullSecrets:
        - name: regcred
      serviceAccountName: default
      securityContext: {}
      containers:
        - name: mern
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
          image: "alvynabranches/client"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            limits:
              memory: 3Gi
              cpu: 200M
            requests:
              cpu: 100M
              memory: 2Gi
